# sdl2_shooter

./: CMakeLists.txt  README.md
cmake/: FindCMocka.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
src/shooter/: CMakeLists.txt  asset_loader.c  asset_loader.h  audio_service.c  audio_service.h  defs.h  draw.c  draw.h  entity.c  entity.h  entity_test.c  event.c  event.h  events.c  events.h  explosions.c  explosions.h  frame_rate.c  frame_rate.h  game_context.c  game_context.h  game_context_test.c  game_world.c  game_world.h  init.c  init.h  input.c  input.h  input_manager.c  input_manager.h  linked_list.c  linked_list.h  linked_list_test.c  main.c  stage.c  stage.h  star_field.c  star_field.h  structs.h  texture_manager.c  (+5 more)
