cmake_minimum_required(VERSION 3.11)

project(Shooter C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED TRUE)

list(APPEND CMAKE_MODULE_PATH "${Shooter_SOURCE_DIR}/cmake")
include(GNUInstallDirs)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${Shooter_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${Shooter_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${Shooter_BINARY_DIR}/lib)

find_package(SDL2 REQUIRED)
message(STATUS "SDL2_INCLUDE_DIRS: ${SDL2_INCLUDE_DIRS}")
message(STATUS "SDL2_LIBRARIES: ${SDL2_LIBRARIES}")

find_package(SDL2_image REQUIRED)
message(STATUS "SDL2_IMAGE_INCLUDE_DIRS: ${SDL2_IMAGE_INCLUDE_DIRS}")
message(STATUS "SDL2_IMAGE_LIBRARIES: ${SDL2_IMAGE_LIBRARIES}")

find_package(SDL2_mixer REQUIRED)
message(STATUS "SDL2_MIXER_INCLUDE_DIRS: ${SDL2_MIXER_INCLUDE_DIRS}")
message(STATUS "SDL2_MIXER_LIBRARIES: ${SDL2_MIXER_LIBRARIES}")

option(BUILD_TESTING "Enable tests." ON)

if (BUILD_TESTING)
  enable_testing()
  
  find_package(CMocka REQUIRED)
  message(STATUS "CMOCKA_INCLUDE_DIRS: ${CMOCKA_INCLUDE_DIRS}")
  message(STATUS "CMOCKA_LIBRARIES: ${CMOCKA_LIBRARIES}")
endif()

add_subdirectory(src/shooter)
