unset(SHOOTER_PRIVATE_DEPENDENCIES)
unset(SHOOTER_PRIVATE_DEPENDENCIES_INCLUDE_DIRS)

if (SDL2_FOUND)
  list(APPEND SHOOTER_PRIVATE_DEPENDENCIES ${SDL2_LIBRARIES})
  list(APPEND SHOOTER_PRIVATE_DEPENDENCIES_INCLUDE_DIRS ${SDL2_INCLUDE_DIRS})  
endif()

set(SHOOTER_SRCS
  init.c
  input.c
  draw.c
  main.c)

add_executable(shooter ${SHOOTER_SRCS})

target_include_directories(shooter PRIVATE
  ${Shooter_SOURCE_DIR}/src
  ${SHOOTER_PRIVATE_DEPENDENCIES_INCLUDE_DIRS})

target_link_libraries(shooter PRIVATE
  ${SHOOTER_PRIVATE_DEPENDENCIES})
